Fix container name, though probably doesn't fix credential issue

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      etcd:
+      sqs-mock:
         image: gasbuddy/sqs-mock
         ports:
           - 9324:9324
