--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
         npm install
         npm run lint
         npm run build
-        npm test
+        SQS_HOST=sqs-mock npm test
       env:
         NPM_TOKEN: ${{secrets.npm_token}}
         CI: true
