Timeout handling and more tests

--- a/docker/elasticmq.conf
+++ b/docker/elasticmq.conf
@@ -6,4 +6,9 @@ queues {
     delay = 0 seconds
     receiveMessageWait = 0 seconds
   }
+  quick_queue {
+    defaultVisibilityTimeout = 1 seconds
+    delay = 0 seconds
+    receiveMessageWait = 1 seconds
+  }
 }
