--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/configured-sqs-client",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A configuration driven SQS client",
   "main": "build/index.js",
   "scripts": {
@@ -28,7 +28,8 @@
     "bluebird": "^3.7.2",
     "cross-env": "^7.0.0",
     "eslint-config-gasbuddy": "^5.3.0",
-    "tap": "^14.10.6"
+    "tap": "^14.10.6",
+    "why-is-node-running": "^2.1.0"
   },
   "dependencies": {
     "aws-sdk": "^2.610.0",
