--- a/docker/elasticmq.conf
+++ b/docker/elasticmq.conf
@@ -11,4 +11,16 @@ queues {
     delay = 0 seconds
     receiveMessageWait = 1 seconds
   }
+  redrive_queue {
+    defaultVisibilityTimeout = 1 seconds
+    deadLettersQueue {
+      name = "dead_letter_queue"
+      maxReceiveCount = 3 // from 1 to 1000
+    }
+  }
+  dead_letter_queue {
+    defaultVisibilityTimeout = 30 seconds
+    delay = 0 seconds
+    receiveMessageWait = 0 seconds
+  }
 }
