--- a/docker/elasticmq.conf
+++ b/docker/elasticmq.conf
@@ -6,6 +6,11 @@ queues {
     delay = 0 seconds
     receiveMessageWait = 0 seconds
   }
+  second_queue {
+    defaultVisibilityTimeout = 30 seconds
+    delay = 0 seconds
+    receiveMessageWait = 0 seconds
+  }
   quick_queue {
     defaultVisibilityTimeout = 1 seconds
     delay = 0 seconds
