--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/configured-sqs-client",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "A configuration driven SQS client",
   "main": "build/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "test-some": "tap --node-arg=-r --node-arg=@babel/register",
     "cover": "cross-env BABEL_ENV=test tap tests/test_*.js",
     "lint": "eslint .",
-    "build": "babel src --out-dir build",
+    "build": "babel --source-maps inline src --out-dir build",
     "prepublish": "npm run build"
   },
   "repository": {
