--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A configuration driven SQS client",
   "main": "build/index.js",
   "scripts": {
-    "test": "tap --timeout=30 --no-coverage --node-arg=-r --node-arg=@babel/register tests/*.js",
+    "test": "tap --timeout=30 --jobs=1 --no-coverage --node-arg=-r --node-arg=@babel/register tests/*.js",
     "test-some": "tap --node-arg=-r --node-arg=@babel/register",
     "cover": "cross-env BABEL_ENV=test tap tests/test_*.js",
     "lint": "eslint .",
